@@ -161,31 +161,37 @@ import edu.colorado.phet.common.phetcommon.model.property.Property;
         new ExclusionsMap() {{
             put( Displacement_2C2H6_7O2_4CO2_6H2O.class,
                  new EquationClassesList() {{
+                    add( Displacement_4CO2_6H2O_2C2H6_7O2.class ); /* reverse */
                     add( Displacement_2C2H2_5O2_4CO2_2H2O.class );
                  }}
             );
             put( Displacement_4CO2_6H2O_2C2H6_7O2.class,
                  new EquationClassesList() {{
+                    add( Displacement_2C2H6_7O2_4CO2_6H2O.class ); /* reverse */
                     add( Displacement_4CO2_2H2O_2C2H2_5O2.class );
                  }}
             );
             put( Displacement_2C2H2_5O2_4CO2_2H2O.class,
                  new EquationClassesList() {{
+                     add( Displacement_4CO2_2H2O_2C2H2_5O2.class ); /* reverse */
                      add( Displacement_2C2H6_7O2_4CO2_6H2O.class );
                  }}
             );
             put( Displacement_4CO2_2H2O_2C2H2_5O2.class,
                  new EquationClassesList() {{
+                     add( Displacement_2C2H2_5O2_4CO2_2H2O.class ); /* reverse */
                      add( Displacement_4CO2_6H2O_2C2H6_7O2.class );
                  }}
             );
             put( Displacement_C2H5OH_3O2_2CO2_3H2O.class,
                     new EquationClassesList() {{
+                        add( Displacement_2CO2_3H2O_C2H5OH_3O2.class ); /* reverse */
                         add( Displacement_2CO2_3H2O_C2H5OH_3O2.class );
                     }}
                );
             put( Displacement_2CO2_3H2O_C2H5OH_3O2.class,
                  new EquationClassesList() {{
+                     add( Displacement_C2H5OH_3O2_2CO2_3H2O.class ); /* reverse */
                      add( Displacement_C2H5OH_3O2_2CO2_3H2O.class );
                  }}
             );
